ST-16 Fix feed margin on mobiles, prevent user-scroll on the scroll slider

--- a/src/components/scrollbar-slider/scrollbar-slider.css
+++ b/src/components/scrollbar-slider/scrollbar-slider.css
@@ -1,4 +1,6 @@
 .scrollbar-slider {
+    user-select: none;
+
     .swiper-slide {
         width: 270px;
     }
